Integrate with redux form 🎉

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,8 @@
   border-color: cornflowerblue;
   color: cornflowerblue;
 }
+
+.verification-input__error {
+  color: red;
+  margin-top: 8px;
+}
