--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,10 @@
 $input-height: 50px;
 
-.verification-input__container {
+.vi__wrapper {
   position: relative;
 }
 
-.verification-input__container--default {
-  max-width: 500px;
-}
-
-.verification-input {
+.vi {
   height: 100%;
   box-sizing: border-box;
   position: absolute;
@@ -17,30 +13,30 @@ $input-height: 50px;
   transform: scale(0);
 }
 
-.verification-input--debug {
+.vi--debug {
   left: 0;
   bottom: -70px;
   opacity: 1;
   transform: scale(1);
 }
 
-.verification-input__characters {
+.vi__container {
   display: flex;
+}
+
+.vi__container--default {
+  height: $input-height;
   width: 300px;
 }
 
-.verification-input__characters--default {
-  height: $input-height;
-}
-
-.verification-input__character {
+.vi__character {
   height: 100%;
   flex-grow: 1;
   flex-basis: 0;
   text-align: center;
 }
 
-.verification-input__character--default {
+.vi__character--default {
   font-size: 36px;
   line-height: $input-height;
   color: black;
@@ -54,18 +50,14 @@ $input-height: 50px;
   &:first-child {
     margin-left: 0;
   }
-
-  @media (min-width: 768px) {
-    margin-left: 16px;
-  }
 }
 
-.verification-input__character--inactive--default {
+.vi__character--inactive--default {
   color: dimgray;
   background-color: lightgray;
 }
 
-.verification-input__character--selected--default {
+.vi__character--selected--default {
   outline: 2px solid cornflowerblue;
   color: cornflowerblue;
 }
