--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-$input-height: 50px;
-
 .vi__wrapper {
   position: relative;
 }
@@ -25,7 +23,7 @@ $input-height: 50px;
 }
 
 .vi__container--default {
-  height: $input-height;
+  height: 50px;
   width: 300px;
 }
 
@@ -38,7 +36,7 @@ $input-height: 50px;
 
 .vi__character--default {
   font-size: 36px;
-  line-height: $input-height;
+  line-height: 50px;
   color: black;
   background-color: white;
   margin-left: 8px;
@@ -46,10 +44,10 @@ $input-height: 50px;
   cursor: default;
   user-select: none;
   box-sizing: border-box;
+}
 
-  &:first-child {
-    margin-left: 0;
-  }
+.vi__character--default:first-child {
+  margin-left: 0;
 }
 
 .vi__character--inactive--default {
