--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
-.vi__wrapper {
+/* :where() gives the styles specificity 0, which makes them overridable */
+:where(.vi__wrapper) {
   position: relative;
 }
 
-.vi {
+:where(.vi) {
   height: 100%;
   box-sizing: border-box;
   position: absolute;
@@ -18,44 +19,34 @@
   transform: scale(1);
 }
 
-.vi__container {
+:where(.vi__container) {
   display: flex;
-}
-
-.vi__container--default {
+  gap: 8px;
   height: 50px;
   width: 300px;
 }
 
-.vi__character {
+:where(.vi__character) {
   height: 100%;
   flex-grow: 1;
   flex-basis: 0;
   text-align: center;
-}
-
-.vi__character--default {
   font-size: 36px;
   line-height: 50px;
   color: black;
   background-color: white;
-  margin-left: 8px;
   border: 1px solid black;
   cursor: default;
   user-select: none;
   box-sizing: border-box;
 }
 
-.vi__character--default:first-child {
-  margin-left: 0;
-}
-
-.vi__character--inactive--default {
+:where(.vi__character--inactive) {
   color: dimgray;
   background-color: lightgray;
 }
 
-.vi__character--selected--default {
+:where(.vi__character--selected) {
   outline: 2px solid cornflowerblue;
   color: cornflowerblue;
 }
