--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,17 @@
 }
 
 .vi {
-  height: 100%;
-  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   box-sizing: border-box;
   position: absolute;
   color: transparent;
   background: transparent;
   caret-color: transparent;
   outline: none;
+  border: 0 none transparent;
 }
 
 .vi::selection {
