Add cursor example to docs

--- a/docs-src/pages/styles.css
+++ b/docs-src/pages/styles.css
@@ -16,6 +16,32 @@ html.dark .character {
   box-shadow: 0 2px 0 #444;
 }
 
+.cursor_character--selected {
+  position: relative;
+}
+
+.cursor_character--selected:empty::after {
+  content: "";
+  width: 1px;
+  height: 30px;
+  background-color: #333;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: blink 1s infinite step-end;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
 /* disable tailwind focus indicator */
 .vi.focus-visible {
   box-shadow: none;
