Hide password toggle eye in edge

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,11 @@
   border: 0 none transparent;
 }
 
+.vi::-ms-reveal,
+.vi::-ms-clear {
+  display: none;
+}
+
 .vi::selection {
   background: transparent;
 }
